design Test Appointment Form

--- a/DVLD/Application/LocalLicenseApplication/frmManageLocalLicenseApplications.resx
+++ b/DVLD/Application/LocalLicenseApplication/frmManageLocalLicenseApplications.resx
@@ -125,13 +125,13 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADQ
-        FwAAAk1TRnQBSQFMAwEBAAF4AQABeAEAASABAAEgAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABgAMA
-        ASADAAEBAQABIAYAAUA6AAMMAQ8DNwFaAVABUQFQAZwDXQHMAV0BbQFdAewBQAGDATwB/AFAAYMBPAH8
-        AV0BbQFdAewDXQHMAVABUQFQAZwDNwFaAwwBD/8AyQADGwElAVABUQFQAZ0BTwF5AUsB9gFPAa4BSwH/
+        FwAAAk1TRnQBSQFMAwEBAAGAAQABgAEAASABAAEgAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABgAMA
+        ASADAAEBAQABIAYAAUA6AAMMAQ8DNwFaAVABUQFQAZwDXQHMAV0BbAFdAewBPwGAATsB/AE/AYABOwH8
+        AV0BbAFdAewDXQHMAVABUQFQAZwDNwFaAwwBD/8AyQADGwElAVABUQFQAZ0BTwF4AUsB9gFPAa4BSwH/
         AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGu
-        AUsB/wFPAa4BSwH/AU8BeQFLAfYBUAFRAVABnQMbASX/ALkAAwcBCQNLAYsBTQGMAU0B+gFPAa4BSwH/
+        AUsB/wFPAa4BSwH/AU8BeAFLAfYBUAFRAVABnQMbASX/ALkAAwcBCQNLAYsBTQGJAU0B+gFPAa4BSwH/
         AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGu
-        AUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTQGMAU0B+gNLAYsDBwEJ
+        AUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTQGJAU0B+gNLAYsDBwEJ
         /wCtAAMaASMDXgHSAU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/
         AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGu
         AUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/A14B0gMaASP/AKUAAyEBMAFdAWcBXQHq
@@ -148,17 +148,17 @@
         AUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/
         AU8BrgFLAf8BTwGuAUsB/wFQAa8BTAH/AckB5gHIAf8B0wHrAdIB/wHTAesB0gH/AckB5gHIAf8BUAGv
         AUwB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/
-        AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/A0sBi/8AjQADGwElAU0BjAFNAfoBTwGuAUsB/wFPAa4BSwH/
+        AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/A0sBi/8AjQADGwElAU0BiQFNAfoBTwGuAUsB/wFPAa4BSwH/
         AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGu
         AUsB/wFTAbABUBH/AVMBsAFQAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/
-        AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFNAYwBTQH6AxsBJf8AiQABUAFR
+        AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFNAYkBTQH6AxsBJf8AiQABUAFR
         AVABnQFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/
         AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BUwGwAVAR/wFTAbABUAH/AU8BrgFLAf8BTwGu
         AUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/
-        AU8BrgFLAf8BTwGuAUsB/wFQAVEBUAGd/wCFAAMMAQ8BTwF5AUsB9gFPAa4BSwH/AU8BrgFLAf8BTwGu
+        AU8BrgFLAf8BTwGuAUsB/wFQAVEBUAGd/wCFAAMMAQ8BTwF4AUsB9gFPAa4BSwH/AU8BrgFLAf8BTwGu
         AUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/
         AU8BrgFLAf8BUwGwAVAR/wFTAbABUAH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGu
-        AUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAXkBSwH2
+        AUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAXgBSwH2
         AwwBD/8AgQADNwFaAU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/
         AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AVMBsAFQEf8BUwGw
         AVAB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/
@@ -170,15 +170,15 @@
         AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BUAGvAUwB/wFTAbABTwH/AVMBsAFPAf8BUwGw
         AU8B/wFTAbABTwH/AVMBsAFPAf8BVwGyAVQR/wFXAbIBVAH/AVMBsAFQAf8BUwGwAVAB/wFTAbABUAH/
         AVMBsAFQAf8BUwGwAVAB/wFQAa8BTAH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGu
-        AUsB/wFPAa4BSwH/A10BzP8AgQABXQFtAV0B7AFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/
+        AUsB/wFPAa4BSwH/A10BzP8AgQABXQFsAV0B7AFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/
         AU8BrgFLAf8BTwGuAUsB/wHJAeYByEH/AcsB5wHJAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGu
-        AUsB/wFPAa4BSwH/AU8BrgFLAf8BXQFtAV0B7P8AgQABQAGDATwB/AFPAa4BSwH/AU8BrgFLAf8BTwGu
+        AUsB/wFPAa4BSwH/AU8BrgFLAf8BXQFsAV0B7P8AgQABPwGAATsB/AFPAa4BSwH/AU8BrgFLAf8BTwGu
         AUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wHTAesB0kH/AdQB6wHTAf8BTwGuAUsB/wFPAa4BSwH/
-        AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BQAGDATwB/P8AgQABQAGDATwB/AFPAa4BSwH/
+        AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BPwGAATsB/P8AgQABPwGAATsB/AFPAa4BSwH/
         AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wHTAesB0kH/AdQB6wHTAf8BTwGu
-        AUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BQAGDATwB/P8AgQABXgFq
+        AUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BPwGAATsB/P8AgQABXgFq
         AV4B7QFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wHKAecByUH/
-        AcoB5wHJAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BXQFt
+        AcoB5wHJAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BXQFs
         AV0B7P8AgQABWwFeAVsBzQFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGu
         AUsB/wFRAa8BTQH/AVQBsAFQAf8BVAGwAVAB/wFUAbABUAH/AVQBsAFQAf8BVAGwAVAB/wFXAbIBUxH/
         AVkBswFVAf8BUwGwAVAB/wFTAbABUAH/AVMBsAFQAf8BUwGwAVAB/wFTAbABUAH/AVABrwFMAf8BTwGu
@@ -190,17 +190,17 @@
         AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGu
         AUsB/wFPAa4BSwH/AU8BrgFLAf8BUgGwAU4R/wFVAbEBUQH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/
         AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGu
-        AUsB/wFPAa4BSwH/AzcBWv8AgQADDAEPAU8BeQFLAfYBTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGu
+        AUsB/wFPAa4BSwH/AzcBWv8AgQADDAEPAU8BeAFLAfYBTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGu
         AUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/
         AVIBsAFOEf8BVQGxAVEB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGu
-        AUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwF5AUsB9gMMAQ//AIUA
+        AUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwF4AUsB9gMMAQ//AIUA
         A1EBngFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/
         AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BUgGwAU4R/wFVAbEBUQH/AU8BrgFLAf8BTwGu
         AUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/
-        AU8BrgFLAf8BTwGuAUsB/wFQAVEBUAGd/wCJAAMbASUBTQGMAU0B+gFPAa4BSwH/AU8BrgFLAf8BTwGu
+        AU8BrgFLAf8BTwGuAUsB/wFQAVEBUAGd/wCJAAMbASUBTQGJAU0B+gFPAa4BSwH/AU8BrgFLAf8BTwGu
         AUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/
         AVIBsAFOEf8BVQGxAVEB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGu
-        AUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU0BjAFNAfoDGwEl/wCNAANLAYwBTwGu
+        AUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU0BiQFNAfoDGwEl/wCNAANLAYwBTwGu
         AUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/
         AU8BrgFLAf8BTwGuAUsB/wFQAa8BTAH/AcoB5wHJAf8B1AHrAdQB/wHUAesB1AH/AcsB5wHKAf8BUQGv
         AU0B/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/
@@ -217,12 +217,12 @@
         AUsB/wFPAa4BSwH/AU8BrgFLAf8BXQFnAV0B6gMhATD/AKUAAxoBIwNeAdIBTwGuAUsB/wFPAa4BSwH/
         AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGu
         AUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/
-        AU8BrgFLAf8BWwFfAVsB0wMaAST/AK0AAwcBCQNLAYwBTQGMAU0B+gFPAa4BSwH/AU8BrgFLAf8BTwGu
+        AU8BrgFLAf8BWwFfAVsB0wMaAST/AK0AAwcBCQNLAYwBTQGJAU0B+gFPAa4BSwH/AU8BrgFLAf8BTwGu
         AUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/
-        AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTQGMAU0B+gNLAYsDBwEJ/wC5AAMbASUBUAFR
-        AVABnQFPAXkBSwH2AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/
-        AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwF5AUsB9gFQAVEBUAGdAxsBJv8AyQADDAEP
-        AzcBWgFQAVEBUAGcA10BzAFdAW0BXQHsAUABgwE8AfwBQAGDATwB/AFdAW0BXQHsAVsBXgFbAc0BUAFR
+        AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTQGJAU0B+gNLAYsDBwEJ/wC5AAMbASUBUAFR
+        AVABnQFPAXgBSwH2AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/
+        AU8BrgFLAf8BTwGuAUsB/wFPAa4BSwH/AU8BrgFLAf8BTwF4AUsB9gFQAVEBUAGdAxsBJv8AyQADDAEP
+        AzcBWgFQAVEBUAGcA10BzAFdAWwBXQHsAT8BgAE7AfwBPwGAATsB/AFdAWwBXQHsAVsBXgFbAc0BUAFR
         AVABnAM3AVoDDAEP/wCpAAFCAU0BPgcAAT4DAAEoAwABgAMAASADAAEBAQABAQYAAQIWAAP/AQAB/wHA
         AQMB/wwAAf8CAAH/DAAB/AIAAT8MAAH4AgABHwwAAfACAAEPDAAB4AIAAQcMAAHAAgABAwwAAcACAAED
         DAABgAIAAQEMAAGAAgABAcwAAYACAAEBDAABgAIAAQEMAAHAAgABAwwAAcACAAEDDAAB4AIAAQcMAAHw
@@ -231,5 +231,8 @@
   </data>
   <metadata name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>389, 19</value>
+  </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>83</value>
   </metadata>
 </root>
